--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                     <h1>I am David Maradiago</h1>
 
                     <h3>
-                        I am a Full Stack <span>Software Engineer</span>, with over three years of experience in both software and web development.
-                        I’ve worked with technologies like .Net, C#, Blazor, Sql Server, CosmosDB, JavaScript, Angular, React and Python. 
+                        I am a Full Stack <span>Software Engineer</span>, with over 5 years of experience in both software and web development.
+                        I’ve worked with technologies like .Net, .Net Core, .Net Framework, C#, Blazor, Sql Server, CosmosDB, JavaScript, Angular, React and Python. 
                         I also have experience with tools like Microsoft Azure, Jenkins, SonarQube, Postman, Git, GitHub, as well as HTML and CSS.
 
                         Let's <a class="smoothscroll" href="#about">delve deeper</a> into my journey as you discover more <a class="smoothscroll" href="#about">about me</a>.
@@ -116,13 +116,13 @@
             <div class="column large-9 tab-12 s-about__content">
                 <h3>About Me</h3>
                 <p>
-                    I am a Software Software Engineer with over three years of experience in software and web development. My expertise lies in
+                    I am a Software and IT processes Engineer with over 5 years of experience in software and web development. My expertise lies in
                     technologies such as .NET, C#, ASP .Net, Blazor, Python, JavaScript, Angular, React, SQL Server, CosmosDB, Microsoft Azure, Jenkins, SonarQube, Postman, Docker, Git,
                     and GitHub. Additionally, I have proficiency in Node.js, Python (Django), TypeScript, JavaScript,
                     React, HTML, CSS and worked with the Agile Methodology SCRUM.
                     I am also willing to learn more technologies depending of the needs of my team work.
 
-                    Prior to my role as a developer, I accrued over 3.5 years of experience as an Industrial Engineer
+                    Prior to my role as a developer, I accrued over 5 years of experience as an Industrial Engineer
                     specializing in Information Technology. In this capacity, I excelled in roles such as IT Process
                     Engineer, where I designed, implemented, and optimized processes for various clients. I also gained
                     hands-on experience in technical support, serving as an on-site support technician, service leader,
