--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
                     </div>
                     <div class="column w-1000-stack">
-                        <a target="_blank" href="./cv/20250103 Resume Javier David Maradiago Rodriguez.pdf" download
+                        <a target="_blank" href="./Resume/20250103 Resume Javier David Maradiago Rodriguez.pdf" download
                             class="btn btn--download">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 style="fill:rgba(0, 0, 0, 1);transform:-ms-filter">
